[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/SelectChara.gd" type="Script" id=1]
[ext_resource path="res://image/silentButton.png" type="Texture" id=2]
[ext_resource path="res://image/ironcladPortrait.jpg" type="Texture" id=3]
[ext_resource path="res://image/ironcladButton.png" type="Texture" id=4]

[node name="SelectChara" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warrior" type="TextureButton" parent="HBoxContainer"]
margin_left = 408.0
margin_right = 472.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Rogue" type="TextureButton" parent="HBoxContainer"]
margin_left = 476.0
margin_right = 540.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 544.0
margin_top = 21.0
margin_right = 552.0
margin_bottom = 43.0

[node name="Embark" type="Button" parent="HBoxContainer"]
margin_left = 556.0
margin_right = 615.0
margin_bottom = 64.0
text = "Embark"
[connection signal="pressed" from="HBoxContainer/Warrior" to="." method="_on_Warrior_pressed"]
[connection signal="pressed" from="HBoxContainer/Rogue" to="." method="_on_Rogue_pressed"]
[connection signal="pressed" from="HBoxContainer/Embark" to="." method="_on_Embark_pressed"]
